<resources>
    <string name="app_name">Film Adviser</string>
    <string name="poster_of_movie">постер к фильму</string>
    <string name="sort_popularity">По популярности</string>
    <string name="sort_rated">По рейтингу</string>
    <string name="title_name">Название:</string>
    <string name="original_title_text">Оригинальное название:</string>
    <string name="rating_text">Рейтинг:</string>
    <string name="release_year_text">Год релиза:</string>
    <string name="description_label_text">Описание:</string>
    <string name="add_to_favorite">Добавлено в избранное</string>
    <string name="delete_from_favorite">Удалено из избранного</string>
    <string name="item_main">Главная</string>
    <string name="item_favorite">Избранное</string>
    <string name="launch_trailer">Запустить трейлер</string>
    <string name="action_share">Поделиться</string>
</resources>